<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="15dp"
    tools:context=".ForecastFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp"
        android:layout_marginVertical="10dp"
        android:background="@color/white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/mon"

                android:textColor="@color/black"
                android:textSize="30sp"></TextView>

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginHorizontal="10dp"
                android:src="@drawable/weather_icon"></ImageView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Rainy\n20C - 25C"
                android:textColor="@color/black"
                android:textSize="40sp"
                android:layout_marginLeft="20sp"></TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/tue"
            android:textColor="@color/black"
            android:textSize="40sp"></TextView>

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginHorizontal="10dp"
            android:src="@drawable/weather_icon"></ImageView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Rainy\n21C - 25C"
            android:textColor="@color/black"
            android:textSize="40sp"
            android:layout_marginLeft="20sp"></TextView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/wed"
                android:textColor="@color/black"
                android:textSize="40sp"></TextView>

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginHorizontal="10dp"
                android:src="@drawable/weather_icon"></ImageView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Rainy\n22C - 26C"
                android:textColor="@color/black"
                android:textSize="40sp"
                android:layout_marginLeft="20sp"></TextView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/thu"
                android:textColor="@color/black"
                android:textSize="40sp"></TextView>

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginHorizontal="10dp"
                android:src="@drawable/weather_icon"></ImageView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Rainy\n22C - 24C"
                android:textColor="@color/black"
                android:textSize="40sp"
                android:layout_marginLeft="20sp"></TextView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/fri"
                android:textColor="@color/black"
                android:textSize="40sp"></TextView>

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginHorizontal="10dp"
                android:src="@drawable/weather_icon"></ImageView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Rainy\n20C - 27C"
                android:textColor="@color/black"
                android:textSize="40sp"
                android:layout_marginLeft="20sp"></TextView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/sat"
                android:textColor="@color/black"
                android:textSize="40sp"></TextView>

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginHorizontal="10dp"
                android:src="@drawable/weather_icon"></ImageView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Storm\n19C - 23C"
                android:textColor="@color/black"
                android:textSize="40sp"
                android:layout_marginLeft="20sp"></TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/sun"
                android:textColor="@color/black"
                android:textSize="40sp"></TextView>

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginHorizontal="10dp"
                android:src="@drawable/weather_icon"></ImageView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20sp"
                android:text="Storm\n17C - 21C"
                android:textColor="@color/black"
                android:textSize="40sp"></TextView>
        </LinearLayout>


    </LinearLayout>
</LinearLayout>